# ghostty-configuration

./: bun.lockb  dune  dune-project  ghostty_configurator.opam  index.html  package.json  tailwind.config.js  vite.config.js
app/: bun.lockb  dune  index.html  package.json
public/: styles.css
src/: app.re  button.re  card.re  dune  typography.re
