(dirs :standard \ node_modules)

(alias
 (name all)
 (deps
  (alias_rec vite)))

(melange.emit
 (target build)
 (alias ghostty)
 (emit_stdlib true)
 (libraries app)
 (promote (until-clean))
 (module_systems es6))

(rule
 (alias tailwind)
 (deps
  (:in ./tailwind.css)
  (:config ./tailwind.config.js)
  (:index_html ./index.html)
  (source_tree ./src))
 (targets styles.css)
 (action
  (run npx tailwindcss -c %{config} -i %{in} -o ./styles.css))
 (mode
  (promote
   (until-clean)
   (into ./public))))

(rule
 (alias vite)
 (deps
  (alias_rec ghostty)
  (alias_rec tailwind)
  (:vite_config ./vite.config.js)
  (:pkg_json ./package.json)
  (:index_html ./index.html))
 (targets
  (dir dist))
 (action
  (run bun run vite-build))
 (mode
  (promote (until-clean))))
